@@ -1,4 +1,5 @@
 ======================
+    ADDED: ctrl-h opens history on the current panel
     ADDED: Nicer application search results
     ADDED: i18n multiple plural support (thanks Vaclav Juza)
     ADDED: right click menu -> trash, delete, shred options
